# birder-clip

./: .pylintrc  CITATION.cff  LICENSE  README.md  bumpver.toml  mkdocs.yml  mypy.ini  pyproject.toml  tasks.py
birder_clip/: __init__.py  version.py
birder_clip/common/: fs_ops.py  lib.py  training_cli.py  training_utils.py
birder_clip/conf/: settings.py
birder_clip/data/datasets/: csv.py  fake.py  webdataset.py
birder_clip/inference/: zero_shot.py  zero_shot_templates.py
birder_clip/loss/: __init__.py  contrastive.py
birder_clip/model_registry/: __init__.py  manifest.py  model_registry.py
birder_clip/net/: __init__.py  base.py  clip.py
birder_clip/net/text/: __init__.py  base.py  transformer.py
birder_clip/scripts/: train.py  zero_shot.py
birder_clip/tokenizers/: __init__.py  base.py  hf.py  openai_clip_bpe.py  openvision.py  registry.py  simple_tokenizer.py
birder_clip/tools/: __main__.py  convert_model.py  download_tokenizer.py  list_models.py  model_info.py  show_iterator.py  stats.py
docs/: training.md
requirements/: _requirements-dev.txt  requirements-notebooks.txt  requirements-pytorch-cpu.txt  requirements-pytorch-gpu.txt  requirements.txt
tests/: test_common.py  test_datasets.py  test_loss.py  test_model_registry.py  test_net.py  test_tokenizers.py
tests/fixtures/: image_text.csv
